--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@commitlint/cz-commitlint": "^18.6.1",
         "@eslint/js": "^9.19.0",
         "@inertiajs/vue3": "^2.0.17",
+        "@tailwindcss/forms": "^0.5.10",
         "@tailwindcss/vite": "^4.0.0",
         "@vitejs/plugin-vue": "^6.0.1",
         "@vue/eslint-config-typescript": "^14.3.0",
