--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "devDependencies": {
         "@commitlint/cz-commitlint": "^18.6.1",
         "@eslint/js": "^9.19.0",
+        "@heroicons/vue": "^2.2.0",
         "@inertiajs/vue3": "^2.0.17",
         "@tailwindcss/forms": "^0.5.10",
         "@tailwindcss/vite": "^4.0.0",
