--- a/package.json
+++ b/package.json
@@ -8,17 +8,11 @@
         "dev": "vite",
         "format": "prettier --write resources/",
         "format:check": "prettier --check resources/",
-        "lint": "eslint . --fix",
-        "commit": "git-cz"
-    },
-    "config": {
-        "commitizen": {
-            "path": "@commitlint/cz-commitlint"
-        }
+        "lint": "eslint . --fix"
     },
     "devDependencies": {
-        "@commitlint/cz-commitlint": "^18.6.1",
         "@eslint/js": "^9.19.0",
+        "@headlessui/vue": "^1.7.23",
         "@heroicons/vue": "^2.2.0",
         "@inertiajs/vue3": "^2.0.17",
         "@tailwindcss/forms": "^0.5.10",
