--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
         "laravel/framework": "^12.0",
         "laravel/octane": "^2.12",
         "laravel/tinker": "^2.10.1",
+        "spiral/roadrunner-cli": "^2.6.0",
+        "spiral/roadrunner-http": "^3.3.0",
         "tightenco/ziggy": "^2.5"
     },
     "require-dev": {
