--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -39,7 +39,7 @@ RUN composer install
 RUN php artisan octane:install --server=roadrunner --no-interaction
 
 # Permisos
-RUN chown -R 1000:1000 /var/www/storage /var/www/bootstrap/cache
+RUN chown -R 1000:1000 /var/www
 
 # Cron
 COPY docker/cronjob /etc/crontabs/root
